CKMGR-001: Enhance CakeManager App